working pn push array

--- a/index.html
+++ b/index.html
@@ -25,11 +25,135 @@
                <p class="text-center lead mb-4">
                   <span id="totalFunctionNum"></span> functions documented
                </p>
+               <!-- Will push array-->
+               <div class="col-12 col-lg-8 offset-lg-2 mb-5">
+                  <p class="name">
+                     <b>pushVar</b> - type a NBA team to have it pushed into
+                     Array
+                  </p>
+                  <pre style="display: none;"><code></code></pre>
+                  <div class="actions float-right">
+                     <input type="text" class="form-control inline-action" />
 
+                     <button class="btn btn-primary inline-action">
+                        Run
+                     </button>
+                  </div>
+                  <div class="clearfix mb-3"></div>
+                  <div class="alert alert-primary" style="display: none;"></div>
+                  <div class="alert alert-danger" style="display: none;"></div>
+               </div>
+               <!-- end column -->
+               <!-- Find the nth-last-letter in each word  -->
+               <div class="col-12 col-lg-8 offset-lg-2 mb-5">
+                  <p class="name">
+                     <b>nthToLastLetter</b> - will return the nth-to-last letter
+                     in each word (Can you figure out which letter?) (Minimum -
+                     5 letters)
+                  </p>
+                  <pre style="display: none;"><code></code></pre>
+                  <div class="actions float-right">
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+
+                     <button class="btn btn-primary inline-action">
+                        Run
+                     </button>
+                  </div>
+                  <div class="clearfix mb-3"></div>
+                  <div class="alert alert-primary" style="display: none;"></div>
+                  <div class="alert alert-danger" style="display: none;"></div>
+               </div>
+               <!-- end column -->
+               <!-- Find the last letter in each word-->
+               <div class="col-12 col-lg-8 offset-lg-2 mb-5">
+                  <p class="name">
+                     <b>lastLetter</b> - will return the last character in each
+                     word
+                  </p>
+                  <pre style="display: none;"><code></code></pre>
+                  <div class="actions float-right">
+                     <input type="text" class="form-control inline-action" />
+
+                     <button class="btn btn-primary inline-action">
+                        Run
+                     </button>
+                  </div>
+                  <div class="clearfix mb-3"></div>
+                  <div class="alert alert-primary" style="display: none;"></div>
+                  <div class="alert alert-danger" style="display: none;"></div>
+               </div>
+               <!-- end column -->
+               <!-- Find the nth letter in each word  -->
+               <div class="col-12 col-lg-8 offset-lg-2 mb-5">
+                  <p class="name">
+                     <b>nthLetter</b> - will return the nth letter in each word
+                     (Can you figure out which letter?) (Minimum - 5 letters)
+                  </p>
+                  <pre style="display: none;"><code></code></pre>
+                  <div class="actions float-right">
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+
+                     <button class="btn btn-primary inline-action">
+                        Run
+                     </button>
+                  </div>
+                  <div class="clearfix mb-3"></div>
+                  <div class="alert alert-primary" style="display: none;"></div>
+                  <div class="alert alert-danger" style="display: none;"></div>
+               </div>
+               <!-- end column -->
+               <!-- Find the first letter in each wod column -->
+               <div class="col-12 col-lg-8 offset-lg-2 mb-5">
+                  <p class="name">
+                     <b>firstLetter</b> - will return the first letter in each
+                     word (play around to create new word)
+                  </p>
+                  <pre style="display: none;"><code></code></pre>
+                  <div class="actions float-right">
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+
+                     <button class="btn btn-primary inline-action">
+                        Run
+                     </button>
+                  </div>
+                  <div class="clearfix mb-3"></div>
+                  <div class="alert alert-primary" style="display: none;"></div>
+                  <div class="alert alert-danger" style="display: none;"></div>
+               </div>
+               <!-- end column -->
+               <!-- Finding length of words column -->
+               <div class="col-12 col-lg-8 offset-lg-2 mb-5">
+                  <p class="name">
+                     <b>findLength</b> - will return the character length of
+                     each input
+                  </p>
+                  <pre style="display: none;"><code></code></pre>
+                  <div class="actions float-right">
+                     <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+
+                     <button class="btn btn-primary inline-action">
+                        Run
+                     </button>
+                  </div>
+                  <div class="clearfix mb-3"></div>
+                  <div class="alert alert-primary" style="display: none;"></div>
+                  <div class="alert alert-danger" style="display: none;"></div>
+               </div>
+               <!-- end column -->
                <!-- compound assigment w/ augmented subtraction column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
-                     <b>constructString</b> - Will add favorite fruit to string
+                     <b>constructString</b> - will add favorite fruit to string
                      "My favorite fruit is a/an... because it is delicious."
                   </p>
                   <pre style="display: none;"><code></code></pre>
@@ -49,11 +173,10 @@
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
                      <b>concatenatePlusEquals</b> - will concatenate the first
-                     strong to second existing string
+                     string (Name) to second existing string
                   </p>
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
-                     <input type="text" class="form-control inline-action" />
                      <input type="text" class="form-control inline-action" />
 
                      <button class="btn btn-primary inline-action">
@@ -68,12 +191,14 @@
                <!-- concatenate start column -->
                <div class="col-12 col-lg-8 offset-lg-2 mb-5">
                   <p class="name">
-                     <b>concatenate</b> - will concatenate the input to the end
-                     of the phrase "The dog is ..."
+                     <b>concatenate</b> - will concatenate the two inputs
+                     together (First box = adjective, Second box = noun)
                   </p>
                   <pre style="display: none;"><code></code></pre>
                   <div class="actions float-right">
                      <input type="text" class="form-control inline-action" />
+                     <input type="text" class="form-control inline-action" />
+
                      <button class="btn btn-primary inline-action">
                         Run
                      </button>
